// This proto file defines the MLflow Artifacts Service that provides the following REST APIs
// for proxied artifact operations:
// - /mlflow-artifacts/artifacts/<artifact_path> GET: Download an artifact
// - /mlflow-artifacts/artifacts/<artifact_path> PUT: Upload an artifact
// - /mlflow-artifacts/artifact?path=<value> GET: List artifacts

syntax = "proto3";

package mlflow.artifacts;

option py_generic_services = true;

service MlflowArtifactsService {

  rpc downloadArtifact (DownloadArtifact) returns (stream DownloadArtifact.Response) {}

  rpc uploadArtifact (stream UploadArtifact) returns (UploadArtifact.Response) {}

  rpc listArtifacts (ListArtifacts) returns (ListArtifacts.Response) {}
}

message DownloadArtifact {
  string path = 1;

  message Response {
    bytes data = 1;
  }
}

message UploadArtifact {
  string path = 1;

  bytes data = 2;

  message Response {}
}

message ListArtifacts {
  // Filter artifacts matching this path (a relative path from the root artifact directory).
  optional string path = 1;

  message Response {
    // File location and metadata for artifacts.
    repeated FileInfo files = 1;
  }
}

message FileInfo {
  // Path relative to the root artifact directory run.
  optional string path = 1;

  // Whether the path is a directory.
  optional bool is_dir = 2;

  // Size in bytes. Unset for directories.
  optional int64 file_size = 3;
}
